Pitching  database connection added

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -33,7 +33,7 @@ Welcome
         <img src="{{ url_for('static', filename='images/pitching.webp') }}" alt="Pitching" class="feature-img">
         <h2>Pitching</h2>
         <p>Analyze pitching records and discover the greatest pitchers in history.</p>
-        <a href="{{ url_for('pitching_table') }}" class="btn">View Pitching Stats</a>
+        <a href="{{ url_for('pitching_page') }}" class="btn">View Pitching Stats</a>
     </div>
      <div class="feature">
         <!-- <img src="{{ url_for('static', filename='images/master.jpg') }}" alt="Master" class="feature-img"> -->
