--- a/app/static/batting.css
+++ b/app/static/batting.css
@@ -22,6 +22,12 @@ h1, h2, h3 {
     text-align: center;
 }
 
+.text-right {
+    text-align: right;
+    margin-right: 10%;
+    margin-top: 20px;
+}
+
 .alert {
     max-width: 600px;
     margin: 20px auto;
@@ -42,6 +48,12 @@ h1, h2, h3 {
     background-color: #f8d7da;
     color: #721c24;
     border-color: #f5c6cb;
+}
+
+.alert-info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+    border-color: #bee5eb;
 }
 
 .info-section {
@@ -378,6 +390,79 @@ h1, h2, h3 {
     background-color: #002d62;
     color: white;
     border-bottom: 1px solid #dee2e6;
+}
+
+form, .form-control{
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 13px;
+    background-color: none; 
+    border: 1px solid #dee2e6;
+    box-shadow: none;
+    width: 100%;
+    font-size: 16px;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+.form-control:focus {
+    border-color: #0056b3;
+    box-shadow: 0 0 5px rgba(0, 86, 179, 0.5);
+    border: 1px solid #dee2e6;
+}
+
+.form-control::placeholder {
+    color: #6c757d;
+    font-style: italic;
+}
+
+.modal {
+    position: fixed;
+    z-index: 1050;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-dialog {
+    max-width: 500px;
+    width: 100%;
+}
+
+.modal-content {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    padding: 20px;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #dee2e6;
+}
+
+.modal-title {
+    font-size: 18px;
+    margin: 0;
+}
+
+.modal-body {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
 }
 
 @keyframes fadeIn {
